src/libqtextlayout.h

typedef QTextLayout::FormatRange QTextLayout__FormatRange;
typedef struct QPainter QPainter;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QTextLayout QTextLayout;
typedef struct QTextLayout__FormatRange QTextLayout__FormatRange;
typedef struct QTextLine QTextLine;
QTextLine* QTextLine_new(QTextLine* other);
QTextLine* QTextLine_new2(QTextLine* other);
QTextLine* QTextLine_new3();
bool QTextLine_IsValid(const QTextLine* self);
QRectF* QTextLine_Rect(const QTextLine* self);
double QTextLine_X(const QTextLine* self);
double QTextLine_Y(const QTextLine* self);
double QTextLine_Width(const QTextLine* self);
double QTextLine_Ascent(const QTextLine* self);
double QTextLine_Descent(const QTextLine* self);
double QTextLine_Height(const QTextLine* self);
double QTextLine_Leading(const QTextLine* self);
void QTextLine_SetLeadingIncluded(QTextLine* self, bool included);
bool QTextLine_LeadingIncluded(const QTextLine* self);
double QTextLine_NaturalTextWidth(const QTextLine* self);
double QTextLine_HorizontalAdvance(const QTextLine* self);
QRectF* QTextLine_NaturalTextRect(const QTextLine* self);
double QTextLine_CursorToX(const QTextLine* self, int* cursorPos);
double QTextLine_CursorToXWithCursorPos(const QTextLine* self, int cursorPos);
int QTextLine_XToCursor(const QTextLine* self, double x);
void QTextLine_SetLineWidth(QTextLine* self, double width);
void QTextLine_SetNumColumns(QTextLine* self, int columns);
void QTextLine_SetNumColumns2(QTextLine* self, int columns, double alignmentWidth);
void QTextLine_SetPosition(QTextLine* self, QPointF* pos);
QPointF* QTextLine_Position(const QTextLine* self);
int QTextLine_TextStart(const QTextLine* self);
int QTextLine_TextLength(const QTextLine* self);
int QTextLine_LineNumber(const QTextLine* self);
void QTextLine_Draw(const QTextLine* self, QPainter* painter, QPointF* position);
libqt_list /* of QGlyphRun* */ QTextLine_GlyphRuns(const QTextLine* self);
double QTextLine_CursorToX2(const QTextLine* self, int* cursorPos, int edge);
double QTextLine_CursorToX22(const QTextLine* self, int cursorPos, int edge);
int QTextLine_XToCursor2(const QTextLine* self, double x, int param2);
libqt_list /* of QGlyphRun* */ QTextLine_GlyphRuns1(const QTextLine* self, int from);
libqt_list /* of QGlyphRun* */ QTextLine_GlyphRuns2(const QTextLine* self, int from, int length);
void QTextLine_Delete(QTextLine* self);
QTextLayout__FormatRange* QTextLayout__FormatRange_new(QTextLayout__FormatRange* param1);
void QTextLayout__FormatRange_OperatorAssign(QTextLayout__FormatRange* self, QTextLayout__FormatRange* param1);
void QTextLayout__FormatRange_Delete(QTextLayout__FormatRange* self);