src/qt/libqtextlayout.bf

	
	public void SetPosition(IQPointF pos)
	{
		CQt.QTextLine_SetPosition(this.nativePtr, (pos == default || pos.NativePtr == default) ? default : pos.NativePtr);
	}
	
	public void Position()
	{
		CQt.QTextLine_Position(this.nativePtr);
	}
	
	public int32 TextStart()
	{
		return CQt.QTextLine_TextStart(this.nativePtr);
	}
	
	public int32 TextLength()
	{
		return CQt.QTextLine_TextLength(this.nativePtr);
	}
	
	public int32 LineNumber()
	{
		return CQt.QTextLine_LineNumber(this.nativePtr);
	}
	
	public void Draw(IQPainter painter, IQPointF position)
	{
		CQt.QTextLine_Draw(this.nativePtr, (painter == default || painter.NativePtr == default) ? default : painter.NativePtr, (position == default || position.NativePtr == default) ? default : position.NativePtr);
	}
	
	public void[] GlyphRuns()
	{
		return CQt.QTextLine_GlyphRuns(this.nativePtr);
	}
	
	public double CursorToX2(int32* cursorPos, int64 edge)
	{
		return CQt.QTextLine_CursorToX2(this.nativePtr, cursorPos, (int64)edge);
	}
	
	public double CursorToX22(int32 cursorPos, int64 edge)
	{
		return CQt.QTextLine_CursorToX22(this.nativePtr, cursorPos, (int64)edge);
	}
	
	public int32 XToCursor2(double x, int64 param2)
	{
		return CQt.QTextLine_XToCursor2(this.nativePtr, x, (int64)param2);
	}
	
	public void[] GlyphRuns1(int32 from)
	{
		return CQt.QTextLine_GlyphRuns1(this.nativePtr, from);
	}
	
	public void[] GlyphRuns2(int32 from, int32 length)
	{
		return CQt.QTextLine_GlyphRuns2(this.nativePtr, from, length);
	}
	
}
public class QTextLine
{
	public QTextLinePtr handle;
	
	public static implicit operator QTextLinePtr(Self self)
	{
		return self.handle;
	}
	
	public this(IQTextLine other)
	{
		this.handle = QTextLinePtr.New(other);
	}
	
	public ~this()
	{
		this.handle.Dispose();
	}
	
	public bool IsValid()
	{
		return this.handle.IsValid();
	}
	
	public void Rect()
	{
		this.handle.Rect();
	}
	
	public double X()
	{
		return this.handle.X();
	}
	
	public double Y()
	{
		return this.handle.Y();
	}
	
	public double Width()
	{
		return this.handle.Width();
	}
	
	public double Ascent()
	{
		return this.handle.Ascent();
	}
	
	public double Descent()
	{
		return this.handle.Descent();
	}
	
	public double Height()
	{
		return this.handle.Height();
	}
	
	public double Leading()
	{
		return this.handle.Leading();
	}
	
	public void SetLeadingIncluded(bool included)
	{
		this.handle.SetLeadingIncluded(included);
	}
	
	public bool LeadingIncluded()
	{
		return this.handle.LeadingIncluded();
	}
	
	public double NaturalTextWidth()
	{
		return this.handle.NaturalTextWidth();
	}
	
	public double HorizontalAdvance()
	{
		return this.handle.HorizontalAdvance();
	}
	
	public void NaturalTextRect()
	{
		this.handle.NaturalTextRect();
	}
	
	public double CursorToX(int32* cursorPos)
	{
		return this.handle.CursorToX(cursorPos);
	}
	
	public double CursorToXWithCursorPos(int32 cursorPos)
	{
		return this.handle.CursorToXWithCursorPos(cursorPos);
	}
	
	public int32 XToCursor(double x)
	{
		return this.handle.XToCursor(x);
	}
	
	public void SetLineWidth(double width)
	{
		this.handle.SetLineWidth(width);
	}
	
	public void SetNumColumns(int32 columns)
	{
		this.handle.SetNumColumns(columns);
	}
	
	public void SetNumColumns2(int32 columns, double alignmentWidth)
	{
		this.handle.SetNumColumns2(columns, alignmentWidth);
	}
	
	public void SetPosition(IQPointF pos)
	{
		this.handle.SetPosition(pos);
	}
	
	public void Position()
	{
		this.handle.Position();
	}
	
	public int32 TextStart()
	{
		return this.handle.TextStart();
	}
	
	public int32 TextLength()
	{
		return this.handle.TextLength();
	}
	
	public int32 LineNumber()
	{
		return this.handle.LineNumber();
	}
	
	public void Draw(IQPainter painter, IQPointF position)
	{
		this.handle.Draw(painter, position);
	}
	
	public void[] GlyphRuns()
	{
		return this.handle.GlyphRuns();
	}
	
	public double CursorToX2(int32* cursorPos, int64 edge)
	{
		return this.handle.CursorToX2(cursorPos, edge);
	}
	
	public double CursorToX22(int32 cursorPos, int64 edge)
	{
		return this.handle.CursorToX22(cursorPos, edge);
	}
	
	public int32 XToCursor2(double x, int64 param2)
	{
		return this.handle.XToCursor2(x, param2);
	}
	
	public void[] GlyphRuns1(int32 from)
	{
		return this.handle.GlyphRuns1(from);
	}
	
	public void[] GlyphRuns2(int32 from, int32 length)
	{
		return this.handle.GlyphRuns2(from, length);
	}
	
}
extension CQt
{
	[LinkName("QTextLine_new")]
	public static extern void* QTextLine_new(void* other);
	[LinkName("QTextLine_new2")]
	public static extern void* QTextLine_new2(void* other);
	[LinkName("QTextLine_new3")]
	public static extern void* QTextLine_new3();
	[LinkName("QTextLine_IsValid")]
	public static extern bool QTextLine_IsValid(void* c_this);
	[LinkName("QTextLine_Rect")]
	public static extern void QTextLine_Rect(void* c_this);
	[LinkName("QTextLine_X")]
	public static extern double QTextLine_X(void* c_this);
	[LinkName("QTextLine_Y")]
	public static extern double QTextLine_Y(void* c_this);
	[LinkName("QTextLine_Width")]
	public static extern double QTextLine_Width(void* c_this);
	[LinkName("QTextLine_Ascent")]
	public static extern double QTextLine_Ascent(void* c_this);
	[LinkName("QTextLine_Descent")]
	public static extern double QTextLine_Descent(void* c_this);
	[LinkName("QTextLine_Height")]
	public static extern double QTextLine_Height(void* c_this);
	[LinkName("QTextLine_Leading")]
	public static extern double QTextLine_Leading(void* c_this);
	[LinkName("QTextLine_SetLeadingIncluded")]
	public static extern void QTextLine_SetLeadingIncluded(void* c_this, bool included);
	[LinkName("QTextLine_LeadingIncluded")]
	public static extern bool QTextLine_LeadingIncluded(void* c_this);
	[LinkName("QTextLine_NaturalTextWidth")]
	public static extern double QTextLine_NaturalTextWidth(void* c_this);
	[LinkName("QTextLine_HorizontalAdvance")]
	public static extern double QTextLine_HorizontalAdvance(void* c_this);
	[LinkName("QTextLine_NaturalTextRect")]
	public static extern void QTextLine_NaturalTextRect(void* c_this);
	[LinkName("QTextLine_CursorToX")]
	public static extern double QTextLine_CursorToX(void* c_this, int32* cursorPos);
	[LinkName("QTextLine_CursorToXWithCursorPos")]
	public static extern double QTextLine_CursorToXWithCursorPos(void* c_this, int32 cursorPos);
	[LinkName("QTextLine_XToCursor")]
	public static extern int32 QTextLine_XToCursor(void* c_this, double x);
	[LinkName("QTextLine_SetLineWidth")]
	public static extern void QTextLine_SetLineWidth(void* c_this, double width);
	[LinkName("QTextLine_SetNumColumns")]
	public static extern void QTextLine_SetNumColumns(void* c_this, int32 columns);
	[LinkName("QTextLine_SetNumColumns2")]
	public static extern void QTextLine_SetNumColumns2(void* c_this, int32 columns, double alignmentWidth);
	[LinkName("QTextLine_SetPosition")]
	public static extern void QTextLine_SetPosition(void* c_this, void* pos);
	[LinkName("QTextLine_Position")]
	public static extern void QTextLine_Position(void* c_this);
	[LinkName("QTextLine_TextStart")]
	public static extern int32 QTextLine_TextStart(void* c_this);
	[LinkName("QTextLine_TextLength")]
	public static extern int32 QTextLine_TextLength(void* c_this);
	[LinkName("QTextLine_LineNumber")]
	public static extern int32 QTextLine_LineNumber(void* c_this);
	[LinkName("QTextLine_Draw")]
	public static extern void QTextLine_Draw(void* c_this, void* painter, void* position);
	[LinkName("QTextLine_GlyphRuns")]
	public static extern void[] QTextLine_GlyphRuns(void* c_this);
	[LinkName("QTextLine_CursorToX2")]
	public static extern double QTextLine_CursorToX2(void* c_this, int32* cursorPos, int64 edge);
	[LinkName("QTextLine_CursorToX22")]
	public static extern double QTextLine_CursorToX22(void* c_this, int32 cursorPos, int64 edge);
	[LinkName("QTextLine_XToCursor2")]
	public static extern int32 QTextLine_XToCursor2(void* c_this, double x, int64 param2);
	[LinkName("QTextLine_GlyphRuns1")]
	public static extern void[] QTextLine_GlyphRuns1(void* c_this, int32 from);
	[LinkName("QTextLine_GlyphRuns2")]
	public static extern void[] QTextLine_GlyphRuns2(void* c_this, int32 from, int32 length);
	/// Delete this object from C++ memory
	[LinkName("QTextLine_Delete")]
	public static extern void QTextLine_Delete(void* self);
}
public interface IQTextLayout__FormatRange
{
	void* NativePtr { get; }
}
public struct QTextLayout__FormatRangePtr : IQTextLayout__FormatRange, IDisposable
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(void* ptr)
	{
		this.nativePtr = ptr;
	}
	
	public static Self New(QTextLayout__FormatRangePtr param1)
	{
		return .(CQt.QTextLayout__FormatRange_new((param1 == default || param1.NativePtr == default) ? default : param1.NativePtr));
	}
	
	public void Dispose()
	{
		CQt.QTextLayout__FormatRange_Delete(this.nativePtr);
	}
	
	public void OperatorAssign(QTextLayout__FormatRangePtr param1)
	{
		CQt.QTextLayout__FormatRange_OperatorAssign(this.nativePtr, (param1 == default || param1.NativePtr == default) ? default : param1.NativePtr);
	}
	
}
public class QTextLayout__FormatRange
{
	public QTextLayout__FormatRangePtr handle;
	
	public static implicit operator QTextLayout__FormatRangePtr(Self self)
	{
		return self.handle;
	}
	
	public this(QTextLayout__FormatRangePtr param1)
	{
		this.handle = QTextLayout__FormatRangePtr.New(param1);
	}
	
	public ~this()
	{
		this.handle.Dispose();
	}
	
	public void OperatorAssign(QTextLayout__FormatRangePtr param1)
	{
		this.handle.OperatorAssign(param1);
	}
	
}
extension CQt
{
	[LinkName("QTextLayout__FormatRange_new")]
	public static extern void* QTextLayout__FormatRange_new(void* param1);
	[LinkName("QTextLayout__FormatRange_OperatorAssign")]
	public static extern void QTextLayout__FormatRange_OperatorAssign(void* c_this, void* param1);
	/// Delete this object from C++ memory
	[LinkName("QTextLayout__FormatRange_Delete")]
	public static extern void QTextLayout__FormatRange_Delete(void* self);
}